<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/indicator_margin"
        android:layout_marginTop="@dimen/indicator_margin"
        android:background="@color/colorBrandMask"
        android:orientation="vertical">

        <View
            android:id="@+id/horizontal_scroll_view_topshadow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/drop_shadow_top"
            android:background="@drawable/drop_shadow_top" />

        <hsv.rp.com.CurrencyConverter.View.CurrencyHorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/container_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/horizontal_scroll_textview_leftfiller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/hsv_child_margin"
                    android:text="@string/pad_text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/horizontal_scroll_textview_cad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/hsv_child_margin"
                    android:text="@string/cad_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/horizontal_scroll_textview_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/hsv_child_margin"
                    android:text="@string/eur_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/horizontal_scroll_textview_gbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/hsv_child_margin"
                    android:text="@string/gbp_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/horizontal_scroll_textview_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/hsv_child_margin"
                    android:text="@string/usd_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/horizontal_scroll_textview_jpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/hsv_child_margin"
                    android:text="@string/jpy_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/horizontal_scroll_textview_rightfiller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/hsv_child_margin"
                    android:text="@string/pad_text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:visibility="invisible" />
            </LinearLayout>
        </hsv.rp.com.CurrencyConverter.View.CurrencyHorizontalScrollView>
    </LinearLayout>

    <ImageView
        android:id="@+id/horizontal_scroll_imageview_indicatortop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="@drawable/indicator_1" />

    <ImageView
        android:id="@+id/horizontal_scroll_imageview_indicatorbottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@drawable/indicator_2" />

</FrameLayout>